--- a/shelter/pages/pets/styles/index.css
+++ b/shelter/pages/pets/styles/index.css
@@ -4,7 +4,7 @@ button {
 
 .pets__header {
   position: fixed;
-  z-index: 100;
+  z-index: 10;
   width: 100%;
   background-color: #fff;
   top: 0;
